Production-Org-Metadata/force-app/main/default/objects/Leave__c/Leave__c.object-meta.xml
<CustomObject>
    <label>Leave</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Leave Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>