Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/Actual_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Actual_Deduction__c</fullName>
    <label>Actual Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>