Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/After_Rule_Deduction__c.field-meta.xml
<CustomField>
    <fullName>After_Rule_Deduction__c</fullName>
    <label>After Rule Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>