Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/Cancellation_Reason_HR__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_HR__c</fullName>
    <label>Cancellation Reason HR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>