Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/Doubtfull_Case__c.field-meta.xml
<CustomField>
    <fullName>Doubtfull_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doubtfull Case</label>
    <type>Checkbox</type>
</CustomField>