Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/HR_Approval__c.field-meta.xml
<CustomField>
    <fullName>HR_Approval__c</fullName>
    <label>HR Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>