Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/Leave_Category__c.field-meta.xml
<CustomField>
    <fullName>Leave_Category__c</fullName>
    <label>Leave Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loss of Pay</fullName>
            </value>
            <value>
                <fullName>Extra Day Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>