Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/OnePlusTwo_Rule__c.field-meta.xml
<CustomField>
    <fullName>OnePlusTwo_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OnePlusTwo Rule</label>
    <type>Checkbox</type>
</CustomField>