Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/Rule_Calculation_Details__c.field-meta.xml
<CustomField>
    <fullName>Rule_Calculation_Details__c</fullName>
    <label>Rule Calculation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>