Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/Sandwich_Rule__c.field-meta.xml
<CustomField>
    <fullName>Sandwich_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sandwich Rule</label>
    <type>Checkbox</type>
</CustomField>