Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/Session_End__c.field-meta.xml
<CustomField>
    <fullName>Session_End__c</fullName>
    <label>Session End</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Session-1</fullName>
            </value>
            <value>
                <fullName>Session-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>