Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/TL_Approval__c.field-meta.xml
<CustomField>
    <fullName>TL_Approval__c</fullName>
    <label>TL Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>