Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/Total_Days_After_Rule__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_After_Rule__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Days After Rule</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>