Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/Withdrawal_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Rejection_Reason__c</fullName>
    <label>Withdrawal Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>