Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/Withdrawal_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Requested_Date__c</fullName>
    <label>Withdrawal Requested Date</label>
    <type>Date</type>
</CustomField>