Production-Org-Metadata/force-app/main/default/objects/Leave__c/fields/Withdrawal_Result_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Result_Date__c</fullName>
    <label>Withdrawal Result Date</label>
    <type>Date</type>
</CustomField>